--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,7 +169,7 @@ dev = [
     "mkdocs-gen-files>=0.5.0,<0.6",
     "material-plausible-plugin>=0.3.0,<0.4",
     "mdx-truly-sane-lists>=1.3,<2",
-    "build"
+    "build",
 ]
 
 [tool.ruff.lint]
