--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
 name: release
 
 on:
+  pull_request:
   push:
-    branches:
-      - main
-    tags:
-      - "*"
+    tags: ['v[0-9]+\.[0-9]+\.[0-9]+']
 
 jobs:
   build-and-publish:
