--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,6 +142,7 @@ test = { cmd="pytest --ignore tests/deploy/ui" }
 # When it is supported, we should remove the argument definitions, as they will have become unnecessary.
 pre-commit = { cmd="pre-commit run {{ which_files }} {{ show_diff }} {{ colorize_output }}", args=[ { "arg" = "which_files", "default" = "--files $(git diff --name-only HEAD | tr '\n' ' ')" }, { "arg" = "show_diff", "default" = "" }, { "arg" = "colorize_output", "default" = "" } ] }
 ci = { depends-on = [ { "task" = "pre-commit", "args" = ["--all-files"] }, "types", "optional-dependencies", "test"] }
+build = { cmd="python -m build" }
 
 [dependency-groups]
 dev = [
@@ -167,7 +168,8 @@ dev = [
     "mkdocstrings[python]>=0.29.1,<0.30",
     "mkdocs-gen-files>=0.5.0,<0.6",
     "material-plausible-plugin>=0.3.0,<0.4",
-    "mdx-truly-sane-lists>=1.3,<2"
+    "mdx-truly-sane-lists>=1.3,<2",
+    "build",
 ]
 
 [tool.ruff.lint]
