--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,9 @@ dependencies = [
     # "panel[fastapi]==1.5.4",
     "panel==1.5.4",
     "bokeh-fastapi>=0.1.3",
-    "pydantic>=2",
+    "pydantic>=2.10",
     "pydantic-core",
-    "pydantic-settings>=2",
+    "pydantic-settings[toml]>=2.3",
     "PyJWT",
     "python-multipart",
     "questionary",
