--- a/pyproject.toml
+++ b/pyproject.toml
@@ -177,15 +177,23 @@ depends-on = [
     "build",
 ]
 
+[tool.ruff]
+target-version = "py310"
+
 [tool.ruff.lint]
 select = [
     "E",
     "F",
-    # import sorting
-    "I001"
+    "I001",
+    "B",
 ]
-# Ignore line too long, because due to black, the error can only occur for strings
-ignore = ["E501"]
+
+ignore = [
+    # Ignore line too long, because due to black, the error can only occur for strings
+    "E501",
+    # cache has its purpose
+    "B019",
+]
 
 [tool.ruff.lint.per-file-ignores]
 # ignore unused imports and imports not at the top of the file in __init__.py files
