--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,7 @@ select = [
     "RET",
     "SIM",
     "PTH",
+    "D2",
 ]
 
 ignore = [
@@ -202,14 +203,18 @@ ignore = [
     "B019",
     # built-in open() is well understood
     "PTH123",
+    # mutually-exclusive with D211
+    "D203",
+    # mutually-exclusive with D212
+    "D213",
 ]
 
 [tool.ruff.lint.per-file-ignores]
 # ignore unused imports and imports not at the top of the file in __init__.py files
 "__init__.py" = ["F401", "E402"]
-# The examples often have imports below the top of the file to follow the narrative
-"docs/examples/**/*.py" = ["E402", "F704", "I001"]
-"docs/tutorials/**/*.py" = ["E402", "F704", "I001"]
+# The examples and tutorials need to have a good the narrative rather than follow our code-style rules
+"docs/examples/**/*.py" = ["E402", "F704", "I001", "D"]
+"docs/tutorials/**/*.py" = ["E402", "F704", "I001", "D"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
