--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,11 +49,12 @@ plugins:
       handlers:
         python:
           options:
+            docstring_style: google
             show_source: false
             show_root_heading: true
             show_bases: false
             unwrap_annotated: true
-          import:
+          inventories:
             - https://docs.python.org/3/objects.inv
             - https://fastapi.tiangolo.com/objects.inv
   - gallery:
